[tool.poetry]
name = "Quart_OAuth2_Discord.py"
version = "0.1.0"
description = "A library to make the discord authentication system easier for Quart Users"
authors = ["sairam4123 <sairamkumar2022@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
authlib = "^0.14.3"
quart = "^0.13.1"
aiohttp = "^3.6.2"
httpx = "^0.15.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
